--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "codenight-react",
   "version": "0.0.1",
   "description": "Codenight Frontend",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "build": "webpack",
+    "build-prod": "webpack -p",
+    "dev": "npm run build && webpack-dev-server --port 3000 --content-base dist/ --inline --hot --noInfo"
   },
   "repository": {
     "type": "git",
@@ -18,5 +21,22 @@
   "bugs": {
     "url": "https://github.com/RosyTucker/CodeNightFrontend/issues"
   },
-  "homepage": "https://github.com/RosyTucker/CodeNightFrontend#readme"
+  "homepage": "https://github.com/RosyTucker/CodeNightFrontend#readme",
+  "devDependencies": {
+    "babel-core": "6.4.5",
+    "babel-loader": "6.2.4",
+    "babel-preset-es2015": "6.9.0",
+    "babel-preset-react": "6.5.0",
+    "html-webpack-plugin": "2.17.0",
+    "webpack": "2.1.0-beta.7",
+    "webpack-dev-server": "1.14.1"
+  },
+  "dependencies": {
+    "babel-polyfill": "6.9.0",
+    "history": "2.1.1",
+    "react": "15.0.2",
+    "react-dom": "15.0.2",
+    "react-router": "2.4.0",
+    "redux": "3.5.2"
+  }
 }
