--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Codenight Frontend",
   "main": "src/index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha test --recursive --compilers js:babel-register --timeout 5000",
     "build": "webpack",
     "build-prod": "webpack -p",
     "dev": "npm run build && webpack-dev-server --port 3000 --content-base dist/ --inline --hot --noInfo"
@@ -27,7 +27,14 @@
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.9.0",
     "babel-preset-react": "6.5.0",
+    "babel-register": "6.9.0",
+    "chai": "3.5.0",
+    "enzyme": "2.3.0",
     "html-webpack-plugin": "2.17.0",
+    "mocha": "2.4.5",
+    "react-addons-test-utils": "15.0.2",
+    "sinon": "1.17.4",
+    "sinon-chai": "2.8.0",
     "webpack": "2.1.0-beta.7",
     "webpack-dev-server": "1.14.1"
   },
