--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Codenight Frontend",
   "main": "src/index.js",
   "scripts": {
-    "test": "mocha test --recursive --compilers js:babel-register --timeout 5000",
+    "lint": "eslint -c .eslintrc .",
+    "unit": "mocha test --recursive --compilers js:babel-register --timeout 5000",
+    "test": "npm run lint && npm run unit",
     "build": "webpack",
     "build-prod": "webpack -p",
     "dev": "npm run build && webpack-dev-server --port 3000 --content-base dist/ --inline --hot --noInfo"
@@ -30,6 +32,11 @@
     "babel-register": "6.9.0",
     "chai": "3.5.0",
     "enzyme": "2.3.0",
+    "eslint": "2.10.2",
+    "eslint-config-airbnb": "9.0.1",
+    "eslint-plugin-import": "1.8.0",
+    "eslint-plugin-jsx-a11y": "1.2.2",
+    "eslint-plugin-react": "5.1.1",
     "html-webpack-plugin": "2.17.0",
     "mocha": "2.4.5",
     "react-addons-test-utils": "15.0.2",
