--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "npm run lint && npm run unit",
     "build": "webpack",
     "build-prod": "webpack -p",
+    "start": "node server.js",
     "dev": "npm run build && webpack-dev-server --port 3000 --content-base dist/ --inline --hot --noInfo"
   },
   "repository": {
@@ -47,6 +48,7 @@
   },
   "dependencies": {
     "babel-polyfill": "6.9.0",
+    "express": "4.13.4",
     "history": "2.1.1",
     "react": "15.0.2",
     "react-dom": "15.0.2",
