--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "webpack",
     "build-prod": "webpack -p",
     "start": "node server.js",
+    "postinstall": "npm run build-prod",
     "dev": "npm run build && webpack-dev-server --port 3000 --content-base dist/ --inline --hot --noInfo"
   },
   "repository": {
@@ -31,9 +32,6 @@
   },
   "devDependencies": {
     "babel-core": "6.4.5",
-    "babel-loader": "6.2.4",
-    "babel-preset-es2015": "6.9.0",
-    "babel-preset-react": "6.5.0",
     "babel-register": "6.9.0",
     "chai": "3.5.0",
     "enzyme": "2.3.0",
@@ -42,15 +40,18 @@
     "eslint-plugin-import": "1.8.0",
     "eslint-plugin-jsx-a11y": "1.2.2",
     "eslint-plugin-react": "5.1.1",
-    "html-webpack-plugin": "2.17.0",
     "mocha": "2.4.5",
     "react-addons-test-utils": "15.0.2",
     "sinon": "1.17.4",
     "sinon-chai": "2.8.0",
-    "webpack": "2.1.0-beta.7",
     "webpack-dev-server": "1.14.1"
   },
   "dependencies": {
+    "babel-loader": "6.2.4",
+    "html-webpack-plugin": "2.17.0",
+    "babel-preset-es2015": "6.9.0",
+    "babel-preset-react": "6.5.0",
+    "webpack": "2.1.0-beta.7",
     "babel-polyfill": "6.9.0",
     "express": "4.13.4",
     "history": "2.1.1",
