--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,23 @@
     "mocha": true
   },
   "rules": {
-          "indent": ["error", 4],
-          "comma-dangle": ["error", "never"]
+    "indent": [
+      "error",
+      4
+    ],
+    "react/jsx-indent": [
+      "error",
+      4
+    ],
+    "comma-dangle": [
+      "error",
+      "never"
+    ],
+    "no-trailing-spaces": [
+      "error",
+      {
+        "skipBlankLines": true
       }
+    ]
+  }
 }
