--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "Codenight Frontend",
   "main": "src/index.js",
   "scripts": {
+    "setup": "./scripts/setup.sh",
     "lint": "eslint -c .eslintrc .",
     "unit": "mocha test --recursive --compilers js:babel-register --timeout 5000",
     "test": "npm run lint && npm run unit",
     "build": "webpack",
+    "dev-server": "webpack-dev-server --port 3000 --content-base dist/ --inline --hot --noInfo",
+    "dev": "npm run build && npm run dev-server",
     "build-prod": "webpack -p",
-    "start": "node server.js",
-    "postinstall": "npm run build-prod",
-    "dev": "npm run build && webpack-dev-server --port 3000 --content-base dist/ --inline --hot --noInfo"
+    "deploy": "./scripts/deployHeroku.sh",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -28,7 +30,7 @@
   "homepage": "https://github.com/RosyTucker/CodeNightFrontend#readme",
   "engines": {
     "node": "6.2.0",
-    "npm" : "3.8.9"
+    "npm": "3.8.9"
   },
   "devDependencies": {
     "babel-core": "6.4.5",
@@ -42,22 +44,32 @@
     "eslint-plugin-react": "5.1.1",
     "mocha": "2.4.5",
     "react-addons-test-utils": "15.0.2",
+    "redux-devtools": "3.3.1",
     "sinon": "1.17.4",
     "sinon-chai": "2.8.0",
     "webpack-dev-server": "1.14.1"
   },
   "dependencies": {
     "babel-loader": "6.2.4",
-    "html-webpack-plugin": "2.17.0",
+    "babel-polyfill": "6.9.0",
     "babel-preset-es2015": "6.9.0",
     "babel-preset-react": "6.5.0",
-    "webpack": "2.1.0-beta.7",
-    "babel-polyfill": "6.9.0",
+    "css-loader": "0.23.1",
     "express": "4.13.4",
+    "extract-text-webpack-plugin": "1.0.1",
     "history": "2.1.1",
+    "html-webpack-plugin": "2.17.0",
+    "isomorphic-fetch": "2.2.1",
+    "node-sass": "3.7.0",
+    "postcss-loader": "0.9.1",
     "react": "15.0.2",
     "react-dom": "15.0.2",
+    "react-redux": "4.4.5",
     "react-router": "2.4.0",
-    "redux": "3.5.2"
+    "redux": "3.5.2",
+    "redux-thunk": "2.1.0",
+    "sass-loader": "3.2.0",
+    "style-loader": "0.13.1",
+    "webpack": "2.1.0-beta.7"
   }
 }
