--- a/package.json
+++ b/package.json
@@ -33,43 +33,43 @@
     "npm": "3.8.9"
   },
   "devDependencies": {
+    "babel-loader": "6.2.4",
     "babel-core": "6.4.5",
+    "babel-polyfill": "6.9.0",
+    "babel-preset-es2015": "6.9.0",
+    "babel-preset-react": "6.5.0",
     "babel-register": "6.9.0",
     "chai": "3.5.0",
+    "css-loader": "0.23.1",
     "enzyme": "2.3.0",
     "eslint": "2.10.2",
     "eslint-config-airbnb": "9.0.1",
     "eslint-plugin-import": "1.8.0",
     "eslint-plugin-jsx-a11y": "1.2.2",
     "eslint-plugin-react": "5.1.1",
-    "mocha": "2.4.5",
-    "react-addons-test-utils": "15.0.2",
-    "redux-devtools": "3.3.1",
-    "sinon": "1.17.4",
-    "sinon-chai": "2.8.0",
-    "webpack-dev-server": "1.14.1"
-  },
-  "dependencies": {
-    "babel-loader": "6.2.4",
-    "babel-polyfill": "6.9.0",
-    "babel-preset-es2015": "6.9.0",
-    "babel-preset-react": "6.5.0",
-    "css-loader": "0.23.1",
-    "express": "4.13.4",
     "extract-text-webpack-plugin": "1.0.1",
-    "history": "2.1.1",
     "html-webpack-plugin": "2.17.0",
-    "isomorphic-fetch": "2.2.1",
+    "mocha": "2.4.5",
     "node-sass": "3.7.0",
     "postcss-loader": "0.9.1",
+    "react-addons-test-utils": "15.0.2",
+    "redux-devtools": "3.3.1",
+    "sass-loader": "3.2.0",
+    "sinon": "1.17.4",
+    "sinon-chai": "2.8.0",
+    "style-loader": "0.13.1",
+    "webpack-dev-server": "1.14.1",
+    "webpack": "2.1.0-beta.7"
+  },
+  "dependencies": {
+    "express": "4.13.4",
+    "history": "2.1.1",
+    "isomorphic-fetch": "2.2.1",
     "react": "15.0.2",
     "react-dom": "15.0.2",
     "react-redux": "4.4.5",
     "react-router": "2.4.0",
     "redux": "3.5.2",
-    "redux-thunk": "2.1.0",
-    "sass-loader": "3.2.0",
-    "style-loader": "0.13.1",
-    "webpack": "2.1.0-beta.7"
+    "redux-thunk": "2.1.0"
   }
 }
