--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "setup": "./scripts/setup.sh",
     "lint": "eslint -c .eslintrc .",
-    "unit": "mocha test --recursive --compilers js:babel-register --timeout 5000",
+    "unit": "./scripts/unitTest.sh",
     "test": "npm run lint && npm run unit",
     "build": "rm -rf dist && webpack",
     "dev": "npm run build && ./scripts/devServer.sh",
@@ -32,8 +32,8 @@
     "npm": "3.8.9"
   },
   "devDependencies": {
-    "babel-loader": "6.2.4",
     "babel-core": "6.4.5",
+    "babel-loader": "6.2.4",
     "babel-polyfill": "6.9.0",
     "babel-preset-es2015": "6.9.0",
     "babel-preset-react": "6.5.0",
@@ -48,6 +48,7 @@
     "eslint-plugin-react": "5.1.1",
     "extract-text-webpack-plugin": "1.0.1",
     "html-webpack-plugin": "2.17.0",
+    "ignore-styles": "2.0.0",
     "mocha": "2.4.5",
     "node-sass": "3.7.0",
     "postcss-loader": "0.9.1",
@@ -57,8 +58,8 @@
     "sinon": "1.17.4",
     "sinon-chai": "2.8.0",
     "style-loader": "0.13.1",
-    "webpack-dev-server": "1.14.1",
-    "webpack": "2.1.0-beta.7"
+    "webpack": "2.1.0-beta.7",
+    "webpack-dev-server": "1.14.1"
   },
   "dependencies": {
     "express": "4.13.4",
