Pull out some more run scripts

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "setup": "./scripts/setup.sh",
-    "lint": "eslint -c .eslintrc .",
+    "lint": "./scripts/lint.sh",
     "unit": "./scripts/unitTest.sh",
     "test": "npm run lint && npm run unit",
     "build": "rm -rf dist && webpack",
