--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-jsx-a11y": "1.2.2",
     "eslint-plugin-react": "5.1.1",
     "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.8.5",
     "html-webpack-plugin": "2.17.0",
     "ignore-styles": "2.0.0",
     "mocha": "2.4.5",
