--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,10 @@
       "error",
       4
     ],
+    "react/jsx-indent-props": [
+      "error",
+      4
+    ],
     "comma-dangle": [
       "error",
       "never"
