--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "express": "4.13.4",
     "history": "2.1.1",
     "isomorphic-fetch": "2.2.1",
+    "moment": "2.13.0",
     "react": "15.0.2",
     "react-dom": "15.0.2",
     "react-redux": "4.4.5",
