--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "setup": "./scripts/setup.sh",
     "lint": "./scripts/lint.sh",
     "unit": "./scripts/unitTest.sh",
+    "unit-watch": "./scripts/unitTest.sh --watch",
     "test": "npm run lint && npm run unit",
     "build": "rm -rf dist && webpack",
     "dev-server": "./scripts/devServer.sh",
@@ -50,6 +51,7 @@
     "file-loader": "0.8.5",
     "html-webpack-plugin": "2.17.0",
     "ignore-styles": "2.0.0",
+    "jsdom": "9.2.1",
     "mocha": "2.4.5",
     "node-sass": "3.7.0",
     "postcss-loader": "0.9.1",
